--- a/index.html
+++ b/index.html
@@ -10,7 +10,24 @@
 </head>
 <body>
     <header>
-        
+        <nav class="navbar navbar-drak bg-dark">
+            <a class="navbar-brand" href="#">The Road Less Travelled</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle Navigation">
+            <span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a href="#" class="nav-link">Destinations</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Contact Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">About Us</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     </header>
     
 </body>
