Correct spelling error in navbar class and add 'ml-auto' class to the <ul> tag in the navbar to reposition the nav items.

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-drak bg-dark">
+        <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
             <a class="navbar-brand" href="#">The Road Less Travelled</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle Navigation">
-            <span class="navbar-toggler-icon"></span></button>
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav mr-auto">
+                <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
                         <a href="#" class="nav-link">Destinations</a>
                     </li>
@@ -23,7 +24,7 @@
                         <a href="#" class="nav-link">Contact Us</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">About Us</a>
+                        <a href="#" class="nav-link">About</a>
                     </li>
                 </ul>
             </div>
