Create the skeleton structure of the image carousel in index.html.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,32 @@
             </div>
         </nav>
     </header>
+    <section class="image-carousel">
+        <div id="destinationSlides" class="carousel-slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-inner">
+                    <img src="#" alt="First Slide" class="d-none d-md-block w-100">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h3>The Road Less Travelled</h3>
+                        <p>- Hungary Edition</p>
+                    </div>
+                </div>
+                <div class="carousel-inner">
+                    <img src="#" alt="Second Slide" class="d-none d-md-block w-100">
+                </div>
+                <div class="carousel-inner">
+                    <img src="#" alt="Third Slide" class="d-none d-md-block w-100">
+                </div>
+                <div class="carousel-inner">
+                    <img src="#" alt="Fourth Slide" class="d-none d-md-block w-100">
+                </div>
+                <div class="carousel-inner">
+                    <img src="#" alt="Fifth Slide" class="d-none d-md-block w-100">
+                </div>
+            </div>
+        </div>
+    
+    </section>
     
 </body>
 </html>
