Create a section for the desintations to be showcased, within this create a <div> to hold the google maps API. Provide some content for the users explaining how to use and or engage with the API.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,14 @@
                 </div>
             </div>
         </div>
-    
+    </section>
+    <section>
+        <div>
+            <h2>Destinations</h2>
+            <p>Here at The Road Less Travelled, we have handpicked our favourite Hungarian destinations, all brimming with the potential to provide you with your ultimate dream holiday! 
+            Click on one of the markers on the map to learn more about the destination!</p>
+        </div>
+        <div class="google-maps-api"></div>
     </section>
     
 </body>
