Change div ID in the image carousel to differentiate the slides from others used across the site.

--- a/budapest.html
+++ b/budapest.html
@@ -31,7 +31,7 @@
         </nav>
     </header>
     <section class="image-carousel">
-        <div id="destinationSlides" class="carousel-slide" data-ride="carousel">
+        <div id="budapestSlides" class="carousel-slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-inner">
                     <img src="#" alt="First Slide" class="d-none d-md-block w-100">
