Slight content edit in each location HTML file.

--- a/pecs.html
+++ b/pecs.html
@@ -37,7 +37,7 @@
                     <img src="#" alt="First Slide" class="d-none d-md-block w-100">
                     <div class="carousel-caption d-none d-md-block">
                         <h3>The Road Less Travelled</h3>
-                        <p>- Hungary Edition</p>
+                        <p>Pecs</p>
                     </div>
                 </div>
                 <div class="carousel-inner">
