--- a/budapest.html
+++ b/budapest.html
@@ -30,26 +30,26 @@
             </div>
         </nav>
     </header>
-    <section class="image-carousel">
+    <section class="budapest-carousel">
         <div id="budapestSlides" class="carousel-slide" data-ride="carousel">
             <div class="carousel-inner">
-                <div class="carousel-inner">
+                <div class="carousel-item">
                     <img src="#" alt="First Slide" class="d-none d-md-block w-100">
                     <div class="carousel-caption d-none d-md-block">
                         <h3>The Road Less Travelled</h3>
                         <p>Budapest</p>
                     </div>
                 </div>
-                <div class="carousel-inner">
+                <div class="carousel-item active">
                     <img src="#" alt="Second Slide" class="d-none d-md-block w-100">
                 </div>
-                <div class="carousel-inner">
+                <div class="carousel-item">
                     <img src="#" alt="Third Slide" class="d-none d-md-block w-100">
                 </div>
-                <div class="carousel-inner">
+                <div class="carousel-item">
                     <img src="#" alt="Fourth Slide" class="d-none d-md-block w-100">
                 </div>
-                <div class="carousel-inner">
+                <div class="carousel-item">
                     <img src="#" alt="Fifth Slide" class="d-none d-md-block w-100">
                 </div>
             </div>
